# cdk_polylith

./: .gitignore  README.md  pyproject.toml  workspace.toml
bases/cdk_workshop/hello_lambda/: __init__.py
bases/cdk_workshop/hitcounter_lambda/: __init__.py
bases/cdk_workshop/workshop_app/: __init__.py  core.py
components/cdk_workshop/cdk_workshop_stack/: __init__.py  core.py
components/cdk_workshop/hit_counter/: __init__.py  core.py
projects/cdk_app/: cdk.json  pyproject.toml
projects/hello_lambda_project/: pyproject.toml
projects/hitcounter_lambda_project/: pyproject.toml
test/bases/cdk_workshop/hello_lambda/: test_core.py
test/bases/cdk_workshop/hitcounter_lambda/: test_core.py
test/bases/cdk_workshop/workshop_app/: test_core.py
test/components/cdk_workshop/cdk_workshop_stack/: test_core.py
test/components/cdk_workshop/hit_counter/: test_core.py
